--- a/thesis/items/1_intro.tex
+++ b/thesis/items/1_intro.tex
@@ -1,13 +1,15 @@
 \specialsection{Введение}
-Зачем все это?
+Современное программное обеспечение становится все более сложным и масштабным, что увеличивает вероятность ошибок, возникающих в процессе разработки. Даже незначительные на первый взгляд ошибки могут привести к серьезным последствиям — от сбоев в пользовательских приложениях до срывов критически важных систем, таких как медицинское оборудование или системы управления транспортом. Именно поэтому проблема обеспечения надежности программных систем стоит особенно остро. Один из эффективных способов борьбы с потенциальными ошибками — применение методов статического анализа кода.
 
-1. Борьба с ошибками в коде\\
-Ошибки в программном обеспечении могут иметь серьезные последствия, от незначительных сбоев до масштабных катастроф. Статический анализ помогает предотвращать возникновение таких ошибок на ранней стадии разработки
+Статический анализ позволяет обнаружить широкий спектр ошибок и уязвимостей на ранней стадии разработки, еще до выполнения программы. В отличие от динамического анализа, который исследует поведение программы во время исполнения на различных входных данных, статический анализ работает только с исходным кодом или промежуточным представлением программы. Это дает возможность проверять весь возможный спектр входных данных и состояний программы, выявляя проблемы, которые могли бы проявиться лишь в редких и трудновоспроизводимых сценариях выполнения.
 
-2. Разные подходы к анализу\\
-Существуют два основных подхода к анализу кода: динамический и статический. Динамический анализ проводится на основе выполнения кода с различными входными данными, тогда как статический анализ не требует запуска программы
+Одним из наиболее теоретически обоснованных и мощных подходов к статическому анализу является метод абстрактной интерпретации. Этот метод позволяет строить формальные модели поведения программ за счет перехода от конкретных значений переменных к их абстрактным представлениям, которые легче анализировать. Абстрактная интерпретация опирается на математический аппарат теории решеток и вычисление неподвижных точек, которые описывают устойчивое состояние программы относительно определенного вида анализа.
 
+Важным аспектом эффективной реализации абстрактной интерпретации является выбор и оптимизация абстрактных доменов — структур, описывающих возможные абстрактные значения переменных. В случае анализа строк, абстрактный домен представляет собой так называемую строковую решетку — структуру, которая описывает множество возможных строковых значений в программе и их отношения между собой. Однако работа со строковыми значениями традиционно является сложной задачей для статического анализа из-за высокой вариативности строк и операций над ними.
 
+Настоящая работа посвящена исследованию и оптимизации строковой решетки в контексте абстрактной интерпретации. Целью исследования является повышение точности и эффективности анализа программ, работающих со строками, за счет оптимизации представления строковых значений и операций над ними. Рассматриваются методы построения решеток, алгоритмы вычисления неподвижных точек, а также предлагаются подходы к сокращению избыточности и уменьшению вычислительной сложности анализа.
+
+Результаты данной работы могут быть применимы при разработке инструментов статического анализа, обеспечивающих более глубокую проверку программ на наличие ошибок, связанных с некорректной обработкой строковых данных — одной из наиболее частых причин уязвимостей и сбоев в программном обеспечении.
 
 \newpage
 \specialsection{Постановка задачи}
@@ -19,10 +21,3 @@
 SimScale \cite{simscale}, EnergyPlus \cite{energyplus}, TRNSYS \cite{trnsys}
 
 \newpage
-
-\begin{figure}[H]
-\includegraphics[width=\textwidth]{images/NAF_example.png}
-\caption{}
-\label{NAF}
-\end{figure}
-
