неподвижные точки и решетки

--- a/thesis/items/1_intro.tex
+++ b/thesis/items/1_intro.tex
@@ -3,13 +3,21 @@
 
 Статический анализ позволяет обнаружить широкий спектр ошибок и уязвимостей на ранней стадии разработки, еще до выполнения программы. В отличие от динамического анализа, который исследует поведение программы во время исполнения на различных входных данных, статический анализ работает только с исходным кодом или промежуточным представлением программы. Это дает возможность проверять весь возможный спектр входных данных и состояний программы, выявляя проблемы, которые могли бы проявиться лишь в редких и трудновоспроизводимых сценариях выполнения.
 
-Одним из наиболее теоретически обоснованных и мощных подходов к статическому анализу является метод абстрактной интерпретации. Этот метод позволяет строить формальные модели поведения программ за счет перехода от конкретных значений переменных к их абстрактным представлениям, которые легче анализировать. Абстрактная интерпретация опирается на математический аппарат теории решеток и вычисление неподвижных точек, которые описывают устойчивое состояние программы относительно определенного вида анализа.
+Одним из наиболее теоретически обоснованных и мощных подходов к статическому анализу является метод абстрактной интерпретации. Этот метод основан на идее упрощения множества всех возможных состояний программы путем перехода от конкретных значений переменных к их абстрактным представлениям в специально сконструированном математическом пространстве — абстрактном домене. В таком представлении каждое абстрактное значение описывает сразу множество возможных конкретных значений, а операции над абстрактными элементами являются оверапроксимацией (over-approximation) реального поведения программы.
 
-Важным аспектом эффективной реализации абстрактной интерпретации является выбор и оптимизация абстрактных доменов — структур, описывающих возможные абстрактные значения переменных. В случае анализа строк, абстрактный домен представляет собой так называемую строковую решетку — структуру, которая описывает множество возможных строковых значений в программе и их отношения между собой. Однако работа со строковыми значениями традиционно является сложной задачей для статического анализа из-за высокой вариативности строк и операций над ними.
+Оверапроксимация означает, что абстрактный анализ учитывает не только те сценарии, которые реально могут возникнуть, но и теоретически возможные, но недостижимые состояния. Это свойство важно, поскольку оно позволяет гарантировать безопасность анализа: если статический анализ на основе абстрактной интерпретации не обнаружил ошибок, то можно быть уверенным, что в реальном исполнении программы аналогичных ошибок действительно не произойдет — ни при каких входных данных и сценариях выполнения. Такой подход позволяет обнаруживать целые классы потенциальных ошибок, включая обращения к неинициализированным переменным, выходы за границы массивов, деления на ноль и другие критические дефекты.
 
-Настоящая работа посвящена исследованию и оптимизации строковой решетки в контексте абстрактной интерпретации. Целью исследования является повышение точности и эффективности анализа программ, работающих со строками, за счет оптимизации представления строковых значений и операций над ними. Рассматриваются методы построения решеток, алгоритмы вычисления неподвижных точек, а также предлагаются подходы к сокращению избыточности и уменьшению вычислительной сложности анализа.
+\subsubsection*{Неподвижные точки и решетки}
 
-Результаты данной работы могут быть применимы при разработке инструментов статического анализа, обеспечивающих более глубокую проверку программ на наличие ошибок, связанных с некорректной обработкой строковых данных — одной из наиболее частых причин уязвимостей и сбоев в программном обеспечении.
+Фундаментальным математическим понятием в абстрактной интерпретации являются неподвижные точки. При выполнении статического анализа программа рассматривается как множество состояний, которые изменяются при выполнении инструкций. Однако особую сложность представляет анализ циклов и рекурсий, поскольку количество итераций заранее неизвестно и потенциально бесконечно. Полный перебор всех возможных состояний и проходов цикла невозможен на практике из-за комбинаторного взрыва.
+
+Именно здесь применяется вычисление неподвижной точки — состояния программы, при котором дальнейшее выполнение цикла не приводит к появлению новых абстрактных состояний. В контексте абстрактной интерпретации это означает нахождение верхней границы множества возможных значений, которые могут принимать переменные после выполнения неопределенного числа итераций цикла. Такой подход позволяет "замкнуть" цикл, остановив анализ в тот момент, когда достигнута стабильность (фиксация значений) в абстрактном пространстве.
+
+Чтобы анализ завершался за конечное время, применяется механизм ускорения сходимости — так называемый widening (расширение), который грубо обобщает накопленные результаты и ускоряет достижение неподвижной точки, жертвуя при этом частью точности ради производительности.
+
+Вся эта процедура возможна благодаря тому, что абстрактные значения организованы в решетку — математическую структуру, определяющую отношения между абстрактными элементами и операции над ними. Решетка — это частично упорядоченное множество, в котором для любых двух элементов можно определить наименьшую общую верхнюю границу (join) и наибольшую общую нижнюю границу (meet). Эти операции позволяют объединять и пересекать абстрактные состояния, обобщать или уточнять информацию в процессе анализа.
+
+Примером простой решетки является множество булевых значений {$\bot$, true, false, $\top$}, где $\bot$ — невозможное состояние, $\top$ — "неизвестно", а операции join и meet позволяют вычислять общие свойства логических выражений.
 
 \newpage
 \specialsection{Постановка задачи}
