--- a/thesis/items/1_intro.tex
+++ b/thesis/items/1_intro.tex
@@ -1,4 +1,4 @@
-\specialsection{Введение}
+\section{Введение}
 Современное программное обеспечение становится все более сложным и масштабным, что увеличивает вероятность ошибок, возникающих в процессе разработки. Даже незначительные на первый взгляд ошибки могут привести к серьезным последствиям — от сбоев в пользовательских приложениях до срывов критически важных систем, таких как медицинское оборудование или системы управления транспортом. Именно поэтому проблема обеспечения надежности программных систем стоит особенно остро. Один из эффективных способов борьбы с потенциальными ошибками — применение методов статического анализа кода.
 
 Статический анализ позволяет обнаружить широкий спектр ошибок и уязвимостей на ранней стадии разработки, еще до выполнения программы. В отличие от динамического анализа, который исследует поведение программы во время исполнения на различных входных данных, статический анализ работает только с исходным кодом или промежуточным представлением программы. Это дает возможность проверять весь возможный спектр входных данных и состояний программы, выявляя проблемы, которые могли бы проявиться лишь в редких и трудновоспроизводимых сценариях выполнения.
@@ -7,7 +7,7 @@
 
 Оверапроксимация означает, что абстрактный анализ учитывает не только те сценарии, которые реально могут возникнуть, но и теоретически возможные, но недостижимые состояния. Это свойство важно, поскольку оно позволяет гарантировать безопасность анализа: если статический анализ на основе абстрактной интерпретации не обнаружил ошибок, то можно быть уверенным, что в реальном исполнении программы аналогичных ошибок действительно не произойдет — ни при каких входных данных и сценариях выполнения. Такой подход позволяет обнаруживать целые классы потенциальных ошибок, включая обращения к неинициализированным переменным, выходы за границы массивов, деления на ноль и другие критические дефекты.
 
-\subsubsection*{Неподвижные точки и решетки}
+\subsection{Неподвижные точки и решетки}
 
 Фундаментальным математическим понятием в абстрактной интерпретации являются неподвижные точки. При выполнении статического анализа программа рассматривается как множество состояний, которые изменяются при выполнении инструкций. Однако особую сложность представляет анализ циклов и рекурсий, поскольку количество итераций заранее неизвестно и потенциально бесконечно. Полный перебор всех возможных состояний и проходов цикла невозможен на практике из-за комбинаторного взрыва.
 
@@ -17,15 +17,27 @@
 
 Вся эта процедура возможна благодаря тому, что абстрактные значения организованы в решетку — математическую структуру, определяющую отношения между абстрактными элементами и операции над ними. Решетка — это частично упорядоченное множество, в котором для любых двух элементов можно определить наименьшую общую верхнюю границу (join) и наибольшую общую нижнюю границу (meet). Эти операции позволяют объединять и пересекать абстрактные состояния, обобщать или уточнять информацию в процессе анализа.
 
-Примером простой решетки является множество булевых значений {$\bot$, true, false, $\top$}, где $\bot$ — невозможное состояние, $\top$ — "неизвестно", а операции join и meet позволяют вычислять общие свойства логических выражений.
+Примером простой решетки является множество булевых значений {$\bot$, true, false, $\top$}, где $\bot$ — невозможное состояние, $\top$ — любое, а операции join и meet позволяют вычислять общие свойства логических выражений.
 
 \newpage
-\specialsection{Постановка задачи}
+\section{Цели и задачи}
 
+Основной проблемой является недостаточная точность строковых абстрактных доменов. В некоторых случаях анализ не может корректно определить недостижимость определенных веток исполнения кода, что приводит к ложным срабатываниям и увеличению количества потенциальных ложных ошибок. Это снижает полезность статического анализа, так как разработчики вынуждены разбираться с ложными предупреждениями.
 
+Целью данной работы является оптимизация строковой решетки, используемой в статическом анализе кода на базе абстрактной интерпретации, с целью повышения ее точности и эффективности.
 
-\newpage
-\specialsection{Обзор предметной области}
-SimScale \cite{simscale}, EnergyPlus \cite{energyplus}, TRNSYS \cite{trnsys}
+Для достижения этой цели необходимо решить следующие задачи:
+
+\begin{itemize}
+\item Провести исследование существующих методов анализа строк в статическом анализе и выявить их недостатки. В частности, определить, в каких случаях текущие решетки недостаточно точно моделируют поведение строковых данных, приводя к ложным срабатываниям.
+
+\item Рассмотреть существующие подходы к построению строковых абстрактных доменов.
+
+\item Разработать и предложить оптимизированный вариант строковой решетки, сочетающий точность анализа и разумное время выполнения.
+
+\item Оценить предложенное решение экспериментально, сравнив его с существующими методами по критериям точности, производительности и масштабирумости.
+\end{itemize}
+
+Результатом работы станет усовершенствованная строковая решетка, позволяющая улучшить статический анализ кода за счет более точного представления строковых данных, сокращения ложных срабатываний и повышения эффективности вычислений.
 
 \newpage
