--- a/thesis/items/4_concl.tex
+++ b/thesis/items/4_concl.tex
@@ -1,27 +1,34 @@
 \specialsection{Выводы}
 
-В итоге был разработан метод, который помогает целесообразно расположить датчик в помещении. Хотя он и не дает глобальной оптимизации, но конструктивно каждый шаг нашей процедуры направлен на улучшение качества системы, поэтому можно говорить о субоптимальном результате. С его помощью можем перейти от более сложной модели CFD к более простой.
-
-Тем не менее, есть еще ряд проблем, над которыми стоит подумать. Одной из них является время года. Например, зимой температура снаружи гораздо ниже, чем внутри. То есть полученная регрессия для летнего периода не будет работать, и придется перерасчитывать коэффициенты. В том числе, временной сдвиг может стать другим, также как и само расположение датчика. Одним из возможных решений может стать усредненный критерий для разных времен года. На самом деле, даже летом для дневного и ночного периода есть разница температур, из-за которой может оказаться так, что ночью расположение датчика одно, а днем другое.
-
-Еще одним вопросом может быть выбор критерия. Возможно стоит также учитывать и усредненную температуру по всем точкам. Тем самым точка у окна, температура в которой наиболее близкая к внешней, может быть достаточно далека от средней температуры, а значит и значение в ней будет меньше влиять на остальные.
-
-Проверить полученный метод на практике пока не удалось, так как для этого нужно оснастить помещение датчиками и провести замеры. Однако, в будущем планируется применение этой процедуры для оборудования испытательного полигона, который сейчас находится на стадии строительства. То есть эффективность будет позже проверена реальными измерениями.
-
 \newpage
 
 \specialsection{Заключение}
 
-В результате работы был разработан алгоритм построения упрощенной динамической модели характеристик воздуха в помещении. С его помощью можно находить расположение датчика, показания в котором позволят улучшить собираемые данные, что повысит качество прогноза.
-
-Была создана упрощенная модель <<Демонстрационного стенда Умного дома>>, в которой учитывается взаимодействие с внешней средой, а также солнечная радиация. Осуществлен переход от численной модели к более простой, пригодной для быстрого расчета.
-
-На данный момент реализован перебор потенциальных точек расположения датчика. В будущем этот перебор можно оптимизировать, реализовав градиентный поиск. С его помощью сможем быстрее находить подходящие точки для больших помещений. Хотя в таком случае мы найдем лишь локальные максимумы, этот результат наоборот может сыграть нам на руку, так как тем самым возможно получится решить проблему разбиения большого зала, который не покрыть одним датчиком, на зоны.
-
-Полученный алгоритм можно найти по ссылке на GitHub: \url{https://github.com/mozhayka/microclimate}. Модели помещения в COMSOL также можно найти по этой ссылке.
 
 \newpage
 
 \specialsection{Благодарность}
 
-Автор выражает особую благодарность Юрию Михайловичу Рассадину за регулярное внимание и наставления к данной работе
+
+\newpage
+% Аргумент {1} ниже включает переопределенный стиль с выравниванием слева
+\begin{thebibliography}{1}
+
+\bibitem{CousotCousot77} Cousot P., Cousot R. \emph{Abstract Interpretation: A Unified Lattice Model for Static Analysis of Programs by Construction or Approximation of Fixpoints} // POPL. 1977.  
+\url{https://doi.org/10.1145/512950.512973}
+
+\bibitem{King76} King J.C. \emph{Symbolic Execution and Program Testing} // Communications of the ACM. 1976.  
+\url{https://doi.org/10.1145/360248.360252}
+
+\bibitem{ChristensenMøller03} Christensen A.S., Møller A. \emph{Precise Analysis of String Expressions} // SAS. 2003.  
+\url{https://doi.org/10.1007/3-540-44898-5_10}
+
+\bibitem{TARSIS} Arceri V. et al. \emph{Abstract Domains for String Analysis} // ACM Computing Surveys. 2022.  
+\url{https://doi.org/10.1145/3494523}
+
+\bibitem{SMTStrings} Zheng Y. et al. "SMT-Based String Analysis for Vulnerability Detection", 2021.
+
+\bibitem{Z3} de Moura L., Bjørner N. "Z3: An Efficient SMT Solver" // TACAS. 2008.
+\bibitem{CVC5} Barbosa H. et al. "cvc5: A Versatile and Industrial-Strength SMT Solver" // TACAS. 2022.
+
+\end{thebibliography}
