--- a/thesis/items/spbudiploma.sty
+++ b/thesis/items/spbudiploma.sty
@@ -111,3 +111,12 @@
     \sfcode`\.\@m}
     {\def\@noitemerr{\@latex@warning{Empty `thebibliography' environment}}%
     \endlist}
+
+
+% Отключаем нумерацию в тексте
+\titleformat{\section}
+{\normalfont\LARGE\bfseries}{}{0pt}{}
+\titleformat{\subsection}
+{\normalfont\Large\bfseries}{}{0pt}{}
+\titleformat{\subsubsection}
+{\normalfont\large\bfseries}{}{0pt}{}
