обзор предметной области

--- a/thesis/items/main/intro.tex
+++ b/thesis/items/main/intro.tex
@@ -24,7 +24,7 @@
 
 Основной проблемой является недостаточная точность строковых абстрактных доменов. В некоторых случаях анализ не может корректно определить недостижимость определенных веток исполнения кода, что приводит к ложным срабатываниям и увеличению количества потенциальных ложных ошибок. Это снижает полезность статического анализа, так как разработчики вынуждены разбираться с ложными предупреждениями.
 
-Целью данной работы является оптимизация строковой решетки, используемой в статическом анализе кода на базе абстрактной интерпретации, с целью повышения ее точности и эффективности.
+Целью данной работы является оптимизация строковой решетки, используемой в статическом анализе кода на базе абстрактной интерпретации, с целью повышения ее точности.
 
 Для достижения этой цели необходимо решить следующие задачи:
 
@@ -33,11 +33,11 @@
 
 \item Рассмотреть существующие подходы к построению строковых абстрактных доменов.
 
-\item Разработать и предложить оптимизированный вариант строковой решетки, сочетающий точность анализа и разумное время выполнения.
+\item Разработать и предложить оптимизированный вариант строковой решетки, сочетающий точность анализа и разумное время выполнения. Деградация производительности не должна превышать $20\%$
 
-\item Оценить предложенное решение экспериментально, сравнив его с существующими методами по критериям точности, производительности и масштабирумости.
+\item Оценить предложенное решение экспериментально, сравнив его с существующими методами по критериям точности, времени исполнения и потреблению памяти.
 \end{itemize}
 
-Результатом работы станет усовершенствованная строковая решетка, позволяющая улучшить статический анализ кода за счет более точного представления строковых данных, сокращения ложных срабатываний и повышения эффективности вычислений.
+Результатом работы станет усовершенствованная строковая решетка, позволяющая улучшить статический анализ кода за счет более точного представления строковых данных, сокращения ложных срабатываний.
 
 \newpage
