--- a/thesis/items/theory/symbolic.tex
+++ b/thesis/items/theory/symbolic.tex
@@ -1,42 +1,7 @@
-\section{Обзор предметной области}
-
-\subsection{Статический анализ}
-Статический анализ кода — это метод выявления ошибок и уязвимостей без выполнения программы, работающий с исходным кодом или промежуточным представлением \cite{CousotCousot77}.
-
-\subsubsection{Ключевые преимущества}
-\begin{itemize}[leftmargin=*]
-    \item \textbf{Полнота}: Анализирует \underline{все} возможные пути выполнения, включая редкие сценарии
-    \item \textbf{Раннее обнаружение}: Позволяет находить ошибки на этапе разработки
-    \item \textbf{Безопасность}: Не требует выполнения потенциально опасного кода
-\end{itemize}
-
-\subsubsection{Сравнение с динамическим анализом}
-\begin{itemize}[leftmargin=*]
-    \item \textbf{Покрытие}: Статический — все пути, динамический — только выполняемые
-    \item \textbf{Ресурсы}: Статический требует меньше вычислительной мощности
-    \item \textbf{Точность}: Динамический анализ дает меньше ложных срабатываний
-\end{itemize}
-
-\begin{codebox}
-// Статический анализ обнаружит уязвимость:\\
-String query = "SELECT * FROM users WHERE id = " + userInput;\\
-// Потенциальная SQL-инъекция\\
-
-// Динамический анализ потребует:\\
-// 1. Запуска программы\\
-// 2. Подачи вредоносного ввода\\
-// 3. Мониторинга поведения\\
-\end{codebox}
-
-\newpage
-
-
-
-
 \subsection{Основные методы статического анализа}
 
 \subsubsection{Символьное исполнение}
-Символьное исполнение — это метод статического анализа, при котором программа выполняется с абстрактными символьными значениями вместо конкретных данных. Каждая переменная представляется как символьное выражение (например, $\alpha$, $\beta$), а условия ветвления записываются как логические формулы \cite{King76}.
+Символьное исполнение — это метод статического анализа, при котором программа выполняется с символьными значениями вместо конкретных данных. Каждая переменная представляется как символьное выражение (например, $\alpha$, $\beta$), а условия ветвления записываются как логические формулы \cite{King76}.
 
 \subsubsection{Принцип работы}
 \begin{itemize}
@@ -103,7 +68,3 @@ String query = "SELECT * FROM users WHERE id = " + userInput;\\
 \end{center}
 
 \newpage
-
-
-
-\subsection{Строковые абстрактные домены}
