обзор до Tarsis

--- a/thesis/items/main/conclusion.tex
+++ b/thesis/items/main/conclusion.tex
@@ -20,6 +20,17 @@
 \bibitem{King76} King J.C. \emph{Symbolic Execution and Program Testing} // Communications of the ACM. 1976.  
 \url{https://doi.org/10.1145/360248.360252}
 
+\bibitem{SymbolicTesting} Cadar C., Sen K. "Symbolic Execution for Software Testing" // IEEE Software. 2013.
+\bibitem{PathExplosion} Baldoni R. et al. "A Survey of Symbolic Execution Techniques" // ACM Computing Surveys. 2018.
+\bibitem{Z3} de Moura L., Bjørner N. "Z3: An Efficient SMT Solver" // TACAS. 2008.
+\bibitem{CVC5} Barbosa H. et al. "cvc5: A Versatile and Industrial-Strength SMT Solver" // TACAS. 2022.
+
+\bibitem{CousotCousot92} Cousot P., Cousot R. "Abstract Interpretation Frameworks" // JLP. 1992.
+\bibitem{ScalingAI} Blanchet B. et al. "A Static Analyzer for Large Safety-Critical Software" // PLDI. 2003.
+\bibitem{FalsePositives} Cousot P. et al. "Why Does Astrée Scale?" // FMSD. 2012.
+
+
+
 \bibitem{ChristensenMøller03} Christensen A.S., Møller A. \emph{Precise Analysis of String Expressions} // SAS. 2003.  
 \url{https://doi.org/10.1007/3-540-44898-5_10}
 
@@ -28,7 +39,5 @@
 
 \bibitem{SMTStrings} Zheng Y. et al. "SMT-Based String Analysis for Vulnerability Detection", 2021.
 
-\bibitem{Z3} de Moura L., Bjørner N. "Z3: An Efficient SMT Solver" // TACAS. 2008.
-\bibitem{CVC5} Barbosa H. et al. "cvc5: A Versatile and Industrial-Strength SMT Solver" // TACAS. 2022.
 
 \end{thebibliography}
