--- a/thesis/items/theory/static_analyzis.tex
+++ b/thesis/items/theory/static_analyzis.tex
@@ -1,32 +1,97 @@
 \section{Обзор предметной области}
 
 \subsection{Статический анализ}
-Статический анализ кода — это метод выявления ошибок и уязвимостей без выполнения программы, работающий с исходным кодом или промежуточным представлением \cite{CousotCousot77}.
 
-\subsubsection{Ключевые преимущества}
-\begin{itemize}[leftmargin=*]
-    \item \textbf{Полнота}: Анализирует \underline{все} возможные пути выполнения, включая редкие сценарии
-    \item \textbf{Раннее обнаружение}: Позволяет находить ошибки на этапе разработки
-    \item \textbf{Безопасность}: Не требует выполнения потенциально опасного кода
+Статический анализ программного кода представляет собой метод исследования программ без их выполнения. Основная цель статического анализа — выявление потенциальных ошибок, уязвимостей и других характеристик программного обеспечения на основе его исходного кода или промежуточного представления \cite{CousotCousot77}. Этот метод используется в компиляторах, инструментах проверки кода, системах анализа безопасности и других приложениях.
+
+Существует несколько техник статического анализа, включая анализ потока данных, анализ потока управления, типизацию, проверку соответствия спецификациям и другие. В отличие от динамического анализа, который требует выполнения программы, статический анализ проводится на уровне исходного кода, байт-кода или абстрактного синтаксического дерева.
+
+\begin{center}
+\begin{tikzpicture}
+\node[draw] (src) {Исходный код};
+\node[draw, right=of src] (ast) {AST};
+\node[draw, right=of ast] (ir) {Промежуточное представление};
+\node[draw, right=of ir] (analysis) {Анализ};
+\draw[->] (src) -- (ast);
+\draw[->] (ast) -- (ir);
+\draw[->] (ir) -- (analysis);
+\end{tikzpicture}
+\end{center}
+
+\subsubsection*{Основные применения}
+\begin{itemize}
+    \item Поиск уязвимостей (CWE, OWASP Top 10)
+    \item Оптимизация кода
+    \item Верификация свойств
+    \item Генерация тестов
 \end{itemize}
 
-\subsubsection{Сравнение с динамическим анализом}
-\begin{itemize}[leftmargin=*]
-    \item \textbf{Покрытие}: Статический — все пути, динамический — только выполняемые
-    \item \textbf{Ресурсы}: Статический требует меньше вычислительной мощности
-    \item \textbf{Точность}: Динамический анализ дает меньше ложных срабатываний
+Два важных метода статического анализа — символьное исполнение и абстрактная интерпретация — позволяют анализировать поведение программ без их непосредственного запуска, но имеют разные подходы и цели.
+
+
+
+
+\newpage
+\subsection{Символьное исполнение}
+
+Символьное исполнение (Symbolic Execution) представляет собой метод анализа, при котором программа исполняется не на конкретных входных данных, а на символьных переменных \cite{King76}. В процессе исполнения строится множество путей выполнения программы, а также логические ограничения, наложенные на переменные. Этот метод используется, например, для генерации тестов с высоким покрытием и обнаружения уязвимостей.
+
+\subsubsection*{Преимущества}
+\begin{itemize}
+\item Позволяет находить ошибки, недоступные при обычном тестировании \cite{SymbolicTesting}
+\item Даёт точные результаты в пределах анализируемых путей
 \end{itemize}
 
-\begin{codebox}
-// Статический анализ обнаружит уязвимость:\\
-String query = "SELECT * FROM users WHERE id = " + userInput;\\
-// Потенциальная SQL-инъекция\\
+\subsubsection*{Ограничения}
+\begin{itemize}
+\item Страдает от проблемы комбинаторного взрыва, так как количество путей выполнения растёт экспоненциально \cite{PathExplosion}
+\item Требует сложных SMT Solver-ов для обработки выражений (Z3~\cite{Z3}, CVC5~\cite{CVC5} и др.)
+\end{itemize}
 
-// Динамический анализ потребует:\\
-// 1. Запуска программы\\
-// 2. Подачи вредоносного ввода\\
-// 3. Мониторинга поведения\\
-\end{codebox}
+
+
+
+\newpage
+\subsection{Абстрактная интерпретация}
+
+Абстрактная интерпретация (Abstract Interpretation) основана на создании приближённых представлений возможных состояний программы \cite{CousotCousot92}. Вместо работы с конкретными или символьными значениями, этот метод использует абстрактные значения, которые обобщают множества возможных состояний.
+
+\subsubsection*{Преимущества}
+\begin{itemize}
+\item Эффективный анализ больших программ \cite{ScalingAI}
+\item Гарантированная завершаемость
+\end{itemize}
+
+\subsubsection*{Ограничения}
+\begin{itemize}
+\item Ложные срабатывания \cite{FalsePositives}
+\item Сложность разработки точных абстракций
+\end{itemize}
+
+
+
+
+\newpage
+\subsection{Сравнение методов}
+
+\begin{center}
+\hspace*{-1.5cm}
+\begin{tabular}{|p{5cm}|p{6cm}|p{6cm}|}
+\hline
+\makecell{\textbf{Характеристика}} & \makecell{\textbf{Символьное} \\ \textbf{исполнение}} & \makecell{\textbf{Абстрактная} \\ \textbf{интерпретация}} \\
+\hline
+\makecell{Точность анализа} & \makecell{Высокая\\(по отдельным путям)} & \makecell{Приближённая\\(но глобальная)} \\
+\hline
+\makecell{Масштабируемость} & \makecell{Ограниченная\\(комбинаторный взрыв)} & \makecell{Высокая\\(благодаря абстракции)} \\
+\hline
+\makecell{Применимость} & \makecell{Поиск ошибок\\генерация тестов} & \makecell{Обнаружение уязвимостей\\верификация} \\
+\hline
+\makecell{Требования\\к вычислениям} & \makecell{Высокие\\(SAT solver)} & \makecell{Более низкие} \\
+\hline
+\end{tabular}
+\end{center}
+
+Таким образом, оба метода находят своё применение в статическом анализе, а их комбинирование может дать более точные и эффективные результаты.
 
 \newpage
 
