--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -73,6 +73,8 @@
 \include{items/theory/static_analyzis}
 \include{items/theory/string}
 
+\include{items/realization/realization}
+
 \include{items/main/conclusion}
 
 \end{document}
